--- a/About/index.html
+++ b/About/index.html
@@ -4,6 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Press+Start+2P">
 	<link rel="stylesheet" href="../css/bootstrap.css"/>
 	<link rel ="stylesheet" href="../css/GameDevelopmentStudio.css"/>
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+	<link rel="icon" href="../favicon.ico" type="image/x-icon">
 	<script src="../js/jquery-2.1.1.js"></script>
 	<script src="../js/bootstrap.js"></script>
 	
@@ -30,7 +32,7 @@
 			<li class="dropdown">
 			  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
 			  <ul class="dropdown-menu" role="menu">
-				<li><a href="#">Labrinth</a></li>
+				<li><a href="#">Labyrinth</a></li>
 				<li><a href="#">Enceladus</a></li>
 			  </ul>
 			</li>
@@ -59,7 +61,10 @@
 		
 			<img class="jumbo" src="../img/GDSGuys.png"/>
 		</div>
-	
+		<h1 class="aboutheader">Contact:</h1>
+		<h4>
+			Email: ucsdgds@gmail.com
+		</h4>
 	</section>
 	
 </body>
