--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -27,7 +27,7 @@
 			<li class="dropdown">
 			  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
 			  <ul class="dropdown-menu" role="menu">
-				<li><a href="#">Labyrinth</a></li>
+				<li><a href="#">Labrinth</a></li>
 				<li><a href="#">Enceladus</a></li>
 			  </ul>
 			</li>
