--- a/Members/index.html
+++ b/Members/index.html
@@ -3,6 +3,8 @@
     <title>Members | Game Development Studio</title>
 	<link rel="stylesheet" href="../css/bootstrap.css"/>
 	<link rel ="stylesheet" href="../css/GameDevelopmentStudio.css"/>
+	<link rel ="stylesheet" href="../css/GameDevelopmentStudio.css"/>
+	<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
 	<script src="../js/jquery-2.1.1.js"></script>
 	<script src="../js/bootstrap.js"></script>
 </head>
@@ -28,7 +30,7 @@
 			<li class="dropdown">
 			  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
 			  <ul class="dropdown-menu" role="menu">
-				<li><a href="#">Labrinth</a></li>
+				<li><a href="#">Labyrinth</a></li>
 				<li><a href="#">Enceladus</a></li>
 			  </ul>
 			</li>
@@ -165,8 +167,6 @@
 		  
 		  
 		</div>
-		
-
 				<div class="thumbnail">
 				  <img src="../img/tempmembericon.gif" alt="...">
 				  <div class="caption">
