--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel ="stylesheet" href="css/GameDevelopmentStudio.css"/>
 	<script src="js/jquery-2.1.1.js"></script>
 	<script src="js/bootstrap.js"></script>
+	<link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
 </head>
 <body>
 	<nav class="navbar navbar-inverse" role="navigation">
@@ -28,7 +29,7 @@
 			<li class="dropdown">
 			  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
 			  <ul class="dropdown-menu" role="menu">
-				<li><a href="#">Labrinth</a></li>
+				<li><a href="#">Labyrinth</a></li>
 				<li><a href="#">Enceladus</a></li>
 			  </ul>
 			</li>
