--- a/About/index.html
+++ b/About/index.html
@@ -8,39 +8,40 @@
 	<link rel="icon" href="../favicon.ico" type="image/x-icon">
 	<script src="../js/jquery-2.1.3.js"></script>
 	<script src="../js/bootstrap.js"></script>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
 	<nav class="navbar navbar-inverse" role="navigation">
-	  <div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		  </button>
-		  <a class="navbar-brand" href="../"><img src="../img/SmallGDS.png"/></a>
-		</div>
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="../"><img src="img/SmallGDS.png"/></a>
+			</div>
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav">
-			<li><a href="../">Home</a></li>
-			<li><a href="../Members">Members</a></li>
-			<li class="dropdown">
-			  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
-			  <ul class="dropdown-menu" role="menu">
-				<li><a href="#">Labyrinth</a></li>
-				<li><a href="#">Enceladus</a></li>
-			  </ul>
-			</li>
-			<li class="active"><a href="#">About/Contact</a></li>
-		  </ul>
-		</div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="../">Home</a></li>
+					<li><a href="../Members">Members</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="#">Labyrinth</a></li>
+							<li><a href="#">Enceladus</a></li>
+						</ul>
+					</li>
+					<li class="active"><a href="#">About/Contact</a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>
+
 	<section class="main" >
 		<h1 class="aboutheader">About Us:</h1>
 			<h4>
@@ -58,7 +59,6 @@
 		</h4>
 		<br>
 		<div class="jumbotron">
-		
 			<img class="jumbo" src="../img/GDSGuys.png"/>
 		</div>
 		<h1 class="aboutheader">Contact:</h1>
@@ -66,5 +66,4 @@
 			Email: ucsdgds@gmail.com
 		</h4>
 	</section>
-	
 </body>
