--- a/Calendar/index.html
+++ b/Calendar/index.html
@@ -1,51 +1,51 @@
+<!DOCTYPE html>
 <head>
-    <title>Calender | Game Development Studio</title>
+	<title>Calender | Game Development Studio</title>
 	<link rel="stylesheet" href="../css/bootstrap.css"/>
 	<link rel ="stylesheet" href="../css/GameDevelopmentStudio.css"/>
 	<script src="../js/jquery-2.1.3.js"></script>
 	<script src="../js/bootstrap.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 </head>
 <body>
 	<nav class="navbar navbar-inverse" role="navigation">
-	  <div class="container-fluid">
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-		  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-			<span class="sr-only">Toggle navigation</span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-		  </button>
-		  <a class="navbar-brand" href="../"><img src="../img/SmallGDS.png"/></a>
-		</div>
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="../"><img src="img/SmallGDS.png"/></a>
+			</div>
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-		  <ul class="nav navbar-nav">
-			<li><a href="../">Home</a></li>
-			<li><a href="#">Members</a></li>
-			<li class="dropdown">
-			  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
-			  <ul class="dropdown-menu" role="menu">
-				<li><a href="#">Labrinth</a></li>
-				<li><a href="#">Enceladus</a></li>
-			  </ul>
-			</li>
-			<li><a href="../About">About/Contact</a></li>
-			<li class="active"><a href="#">Calender</a></li>
-		  </ul>
-		</div><!-- /.navbar-collapse -->
-	  </div><!-- /.container-fluid -->
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+					<li><a href="../">Home</a></li>
+					<li><a href="../Members">Members</a></li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects<span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="#">Labyrinth</a></li>
+							<li><a href="#">Enceladus</a></li>
+						</ul>
+					</li>
+					<li><a href="../About">About/Contact</a></li>
+					<li class="active"><a href="#">Calendar</a></li>
+				</ul>
+			</div><!-- /.navbar-collapse -->
+		</div><!-- /.container-fluid -->
 	</nav>
 
 	<section class="main">
-
-
-			<div class="col-md-12">
-				<section id="calendar">
-					<iframe class="hidden" src="https://www.google.com/calendar/embed?src=ucsdgds%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-					<iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showTabs=0&amp;showCalendars=1&amp;height=400&amp;wkst=1&amp;bgcolor=%23DDDDDD&amp;src=ucsdgds%40gmail.com&amp;color=%232F6309&amp;ctz=America%2FLos_Angeles" style=" border:solid 1px #777 " width="800" height="800" frameborder="0" scrolling="no"></iframe>
-				</section>
-			</div>
-
-		</section>
+		<div class="col-md-12">
+			<section id="calendar">
+				<iframe class="hidden" src="https://www.google.com/calendar/embed?src=ucsdgds%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+				<iframe src="https://www.google.com/calendar/embed?showPrint=0&amp;showTabs=0&amp;showCalendars=1&amp;height=400&amp;wkst=1&amp;bgcolor=%23DDDDDD&amp;src=ucsdgds%40gmail.com&amp;color=%232F6309&amp;ctz=America%2FLos_Angeles" style=" border:solid 1px #777 " width="800" height="800" frameborder="0" scrolling="no"></iframe>
+			</section>
+		</div>
+	</section>
+</body>
